# Smart_Healthcare_System

./: README.md  log.md  备忘录.md
basic_tcp_server/tcp_widget/: mainwindow.cpp  mainwindow.h  mainwindow.ui
chat_server/: server
chat_server/src/: MsgHandle.cpp  chatTask.cpp
client_qt/: Session.cpp  addfrienddialog.cpp  appointment.cpp  appointment.h  appointment.ui  chat_room_client.pro  chatinfomanage.cpp  clientinfo.cpp  clientinfo.h  common.h  global.h  logindlg.cpp  logindlg.h  logindlg.ui  main.cpp  patientinfo.cpp  patientinfo.h  patientinfo.ui  patientmenu.cpp  patientmenu.h  patientmenu.ui  pre.cpp  pre.h  pre.ui  registdlg.cpp  registdlg.h  registdlg.ui  search.cpp  search.h  search.ui  src.qrc  widget.cpp  widget.h  widget.ui
client_qt/custom/: ToolBoxPow.cpp  chatmessage.cpp
database/: CMakeLists.txt  DataBaseThread.cpp
database/include/: database.h  model.h
database/src/: database.cpp  model.cpp
test5/: clientmenubar.cpp  doctorinformation.cpp  doctorinformation.h  doctorinformation.ui  doctormenu.cpp  doctormenu.h  doctormenu.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  patientinformation.cpp  patientinformation.h  patientinformation.ui  patientmenu.cpp  patientmenu.h  patientmenu.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  registerdialog.ui.autosave  test5.pro
